--- a/demo-grpc-dotnet-server/demo-grpc-dotnet-server.csproj
+++ b/demo-grpc-dotnet-server/demo-grpc-dotnet-server.csproj
@@ -59,9 +59,12 @@
   <ItemGroup>
     <Compile Include="grpc\hello\Hello.cs" />
     <Compile Include="grpc\hello\HelloGrpc.cs" />
+    <Compile Include="grpc\jihe\Jihe.cs" />
+    <Compile Include="grpc\jihe\JiheGrpc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="service\HelloServiceImpl.cs" />
+    <Compile Include="service\JiheServiceImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
